Use new parsed table

--- a/training/LEGO_MiniFig_Training.ipynb
+++ b/training/LEGO_MiniFig_Training.ipynb
@@ -92,10 +92,10 @@
         "import pandas as pd\n",
         "\n",
         "# Connect to the SQLite database\n",
-        "db_connection = sqlite3.connect('Database/minifigs.db')\n",
+        "db_connection = sqlite3.connect('../Database/minifigs.db')\n",
         "\n",
         "# Query to get the relevant data from your table\n",
-        "query = \"SELECT fig_id, description, formatted_parts FROM cleaned_minifig_data\"\n",
+        "query = \"SELECT fig_id, description, formatted_parts FROM parsed_minifig_data\"\n",
         "\n",
         "# Load the data into a pandas DataFrame\n",
         "df = pd.read_sql_query(query, db_connection)\n",
